2021-02-01  7.0.10-62  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-62 GIT revision 18...

2021-02-01  7.0.10-62  <quetzlzacatenango@image...>
  * -trim not working as expected (reference
    https://github.com/ImageMagick/ImageMagick/discussions/3172).
  * possible undefined behavior (reference
    https://github.com/ImageMagick/ImageMagick/issues/3195).

2021-01-30  7.0.10-61  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-61 GIT revision 18360:d3bec838c:20210130

2021-01-25  7.0.10-61  <quetzlzacatenango@image...>
  * dng:decode element in delegates.xml quoted incorrectly (reference
    https://github.com/ImageMagick/ImageMagick/issues/3156).
  * Extract GPS info from TIFF images (reference
    https://github.com/ImageMagick/ImageMagick/issues/3167).
  * Revert tieing MagickFloatType to double (reference
    https://github.com/ImageMagick/ImageMagick/pull/2832).

2021-01-25  7.0.10-60  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-60 GIT revision 18347:9a84e249b:20210125

2021-01-24  7.0.10-60  <quetzlzacatenango@image...>
  * revert configure script for validating JXL delegate library.
  * the distributed pixel cache now properly deserializes the image attributes.

2021-01-24  7.0.10-59  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-59 GIT revision 18340:d30ae5272:20210124

2021-01-20  7.0.10-59  <quetzlzacatenango@image...>
  * strip EXIF marker from profile (reference
    https://github.com/ImageMagick/ImageMagick/issues/3140).
  * add --enable-opencl to the configure command-line to enable OpenCL
    support.
  * generate histograms by comparing pixel components rather than color
    (reference https://github.com/ImageMagick/ImageMagick/discussions/3142).

2021-01-16  7.0.10-58  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-58 GIT revision 18277:8876652f5:20210116

2021-01-11  7.0.10-58  <quetzlzacatenango@image...>